# dep-review-test

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: dep-review.yml
