[tool.poetry]
name = "dep-review-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg = "^3.1.13"
pydantic-settings = "^2.0.3"
ddsketch = ">=3.0.0"
ddtrace = "^2.9.1"
distlib = ">=0.3.7,<1"
flake8 = "^6.0.0"
mypy = "^1.5.1"
types-python-dateutil = "" # Add the version if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
